--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,9 @@
     </head>
     <body>
         
-        <h1>___'s blog</h1>
+        <center>
+       <h1>kirby's blog</h1>
+        </center>
 
         <h3>Contents</h3>
         <ul>
