--- a/blog.html
+++ b/blog.html
@@ -23,5 +23,16 @@
         <h6>what i'm looking forward to learning</h6>
          <p>how to add multipe pages 
         
+             <ul>
+            <li>Second post!</li>
+        </ul>
+        
+        <h2>First post 3/20/2018</h2>
+        <h6>what i learned</h6>
+        <p>  i learned how to make circle
+        <h6>what i want learned</h6>
+        <p> i want to learn diffecent shapes
+        <h6>what i'm looking forward to learning</h6>
+         <p>how to animate things
        </body>
 </html>
